fix: fix problem with wrap and the cards

--- a/css/class.css
+++ b/css/class.css
@@ -16,7 +16,7 @@
 
 .email{
     color:darkcyan;
-    font-size: small;
+    font-size: 80%;
 }
 
 .info{
@@ -27,6 +27,6 @@
 .work{
     margin-top: 5px;
     margin-bottom: 5px;
-    font-size: small
+    font-size: 80%;
 }
 
